Initial EMDB Media Service dashboard.